# house-rental

./: README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  houses-rental.db  pyproject.toml  rental.db  run.py
backend/alembic/: env.py
backend/alembic/versions/: 42b5d74b47c4_add_location_column.py  676d5f023157_initial.py  6d9c3ba9004b_init.py  add_booking_table.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
backend/app/api/endpoints/: bookings.py  houses.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  booking.py  house.py
backend/app/schemas/: booking.py  house.py
frontend/: Dockerfile  index.html  styles.css
