[tool.poetry]
name = "house-rental"
version = "0.1.0"
description = ""
authors = ["VladG-PC <gricenkovlad007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
alembic = "^1.16.4"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"